--- a/mod files/localization/english/FF_game_rules_l_english.yml
+++ b/mod files/localization/english/FF_game_rules_l_english.yml
@@ -30,3 +30,12 @@ setting_ToT_is_loaded: "On"
 setting_ToT_is_not_loaded: "Off"
 setting_ToT_is_loaded_desc: "Enable Trick or Trait mechanics"
 setting_ToT_is_not_loaded_desc: "Trick or Trait is not in your playset"
+
+game_rule_category_mmm_tot: "@mmm_tot_icon! Back Me Up"
+rule_ToT_loaded: "Enable Back Me Up"
+setting_ToT_is_loaded: "On"
+setting_ToT_is_loaded_desc: "Enable Trick or Trait mechanics"
+setting_ToT_is_loaded_debug: "Debug"
+setting_ToT_is_loaded_debug_desc: "Enable Trick or Trait mechanics\nLog relevant data to debug.log"
+setting_ToT_is_not_loaded: "Off"
+setting_ToT_is_not_loaded_desc: "Trick or Trait is not in your playset"
