--- a/mod files/localization/english/50_FF_game_rules_l_english.yml
+++ b/mod files/localization/english/50_FF_game_rules_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-game_rule_category_mod_toggle: "Mods Enabled"
+game_rule_category_mod_toggle: "@mod_coop_icon! Mods Enabled"
 game_rule_category_mostly_mechanical_mods: "@mmm_icon! Mostly Mechanical Mods"
 
 game_rule_category_mmm_ff: "@mmm_ff_icon! Foundational Framework"
