--- a/mod files/localization/english/50_FF_debug_compat_l_english.yml
+++ b/mod files/localization/english/50_FF_debug_compat_l_english.yml
@@ -13,13 +13,13 @@ action_FF_debug_compat_interaction_click: "Click to debug"
 
 FF_debug_compat_interaction: "Mod Compatibility Issues"
 FF_debug_compat_interaction_desc: "Test for possible compatibility issues"
-FF_debug_compat_interaction_disclaimer: "Below is the list of incompatibilities detected, with the filename containing the conflicting object, and the key of the object.\n"
+FF_debug_compat_interaction_disclaimer: "Incompatibilities detected, with the filename containing the conflicting object, and the key of the object"
 
-FF_debug_compat_interaction_pay_ransom_interaction: "path: common/character_interactions/00_prison_interactions.txt\nobject: pay_ransom_interaction"
-FF_debug_compat_interaction_ransom_me_interaction: "path: common/character_interactions/00_prison_interactions.txt\nobject: ransom_me_interaction"
-FF_debug_compat_interaction_release_from_prison_interaction: "path: common/character_interactions/00_prison_interactions.txt\nobject: release_from_prison_interaction"
-FF_debug_compat_trigger_can_be_knight_trigger: "path: common/scripted_triggers/00_war_and_peace_triggers.txt\nobject: can_be_knight_trigger\nmod: [FF_compat_debug_mod.GetFlagName]"
-FF_debug_compat_trigger_can_be_commander_now_trigger: "path: common/scripted_triggers/00_war_and_peace_triggers.txt\nobject: can_be_commander_now_trigger\nmod: [FF_compat_debug_mod.GetFlagName]"
-FF_debug_compat_effect_prisoner_of_war_capture_effect: "path: common/scripted_effects/00_prison_effects.txt\nobject: prisoner_of_war_capture_effect\nmod: [FF_compat_debug_mod.GetFlagName]"
+FF_debug_compat_interaction_pay_ransom_interaction: "common/character_interactions/00_prison_interactions.txt\npay_ransom_interaction"
+FF_debug_compat_interaction_ransom_me_interaction: "common/character_interactions/00_prison_interactions.txt\nransom_me_interaction"
+FF_debug_compat_interaction_release_from_prison_interaction: "common/character_interactions/00_prison_interactions.txt\nrelease_from_prison_interaction"
+FF_debug_compat_trigger_can_be_knight_trigger: "common/scripted_triggers/00_war_and_peace_triggers.txt\ncan_be_knight_trigger"
+FF_debug_compat_trigger_can_be_commander_now_trigger: "common/scripted_triggers/00_war_and_peace_triggers.txt\ncan_be_commander_now_trigger"
+FF_debug_compat_effect_prisoner_of_war_capture_effect: "common/scripted_effects/00_prison_effects.txt\nprisoner_of_war_capture_effect"
 
 FF_ransom_me_interaction_is_valid_showing_failures_only: "You are not imprisoned"
